# chat_hindi

./: .gitignore  CLAUDE.md  Dockerfile  chat.py  evaluate_qa.py  finetune.py  generate.py  identity_conversations.jsonl  qa_demo.py  requirements-hf.txt  requirements.txt  rl.py  run_training.bat  setup_env.bat  sft.py  train.py
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  nanohindi_jni.c  run.c  run.h
android/app/src/main/java/com/vizuara/nanohindi/: ChatViewModel.kt  HindiTTS.kt  MainActivity.kt  ModelManager.kt  NanoHindi.kt  VoiceInput.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: themes.xml
android/tools/: export_model.py  export_tokenizer.py  test_decode_pipeline.c  test_forward.c  test_generate.c  test_tokenizer.c  verify_forward.py
data/: __init__.py  download.py  preprocess.py
finetune/: __init__.py  config.py  dataset.py
gpt_oss/: Makefile  run_gptoss.c  run_gptoss.h
gpt_oss/docs/: TEST_RESULTS.md
nano_hindi/: __init__.py  common.py  config.py  eval.py  flash_attention.py  model.py  muon.py  tokenizer.py
tasks/: common.py  customjson.py  hindi_gsm8k.py  hindi_instruct.py  hindi_mmlu.py  hindi_spelling.py
templates/: chat.html
